v1.3.0/product-specifications/core-functions/2.-declare-event.md
# 2. Declare event

A vital event declaration is the submission of the details of the occurrence and characteristics of the vital event as outlined in law, for the purpose of civil registration.

In OpenCRVS a declaration can be completed on any device such as a mobile or desktop and can be completed offline for submission once the user has reconnected.

### **Configuration options:**

* Add custom text input
* Add custom number input
* Add custom select input
* Show/hide default fields (some default fields are mandatory such as Child’s date of birth)
* Set 1 or 2 address for Mother, Father, Informant, Deceased
* Enabled/disabled partial date of births (Age in years)
* Enabled/disabled informant signature capture
* Enabled/disabled declaration introduction page
* Add National ID validation and declaration pre-population (National ID integration required eg. MOSIP)
* On/off send SMS notification to informant with tracking ID

### **Pre-condition**

A vital event has occurred such as a birth, death or marriage.

### **Triggers**

An informant has requested they want to declare a vital event.

### **Standard flow**

1. User click new declaration button ‘Plus button’ in the
2. User selects event type
3. User selects informant type
4. User selects main-point of contact and enters phone number
5. User completes declaration form
   1. Birth declaration form for Farajaland
   2. Death declaration form for Farajaland
   3. Marriage declaration form for Farajaland
6. User uploads or takes a photo of supporting documents
7. User reviews all the details captured in the form against the supporting documents
8. User can choose to add any comments
9. User is prompted to capture the informant digital signature
10. Once all mandatory fields have been completed that are required for registration. Then depending on who has started and is completing the declaration there are different actions on the review page:
    * If Field Agent → Send for review
    * If Registration Agent → Send for approval
    * If Registrar → Register
11. User is prompted to confirm their action
12. On confirming, declaration is sent to the Outbox for processing
13. Once processed the declaration status is updated and sent to the appropriate workqueue depending on who declared the declaration and the action performed on it.

### **Post conditions**

* Declaration is sent to the appropriate users workqueue
  1. If Sent for review → Goes to the Registrar and Registration Agents Ready to review workqueue
  2. If Sent for approval → Goes to the Registrar Ready to review workqueue
  3. If Registrar → Goes to the Ready to print workqueue
* Record audit is updated to log the action performed on the declaration
* Informant receives sms notification with tracking ID if ‘Sent for review’ by Field Agent
* Informant receives sms notification with tracking ID and Registration number if ‘Registered’ by Registrar

### **Variations/Exceptions**

* If the user has no connection. Then the declaration will go to their Outbox. Once reconnected the declaration will be processed and sent.

{% embed url="https://www.loom.com/share/23a63ff5306a4efc9dfe6294a27956ff?sid=ff8d394b-dcc0-4729-9a07-ec3545512798" %}
