v1.8.0/product-specifications/core-functions/2.-declare-event.md
# 2. Declare event

A vital event declaration is the submission of the details of the occurrence and characteristics of the vital event as outlined in law, for the purpose of civil registration.

In OpenCRVS a declaration can be completed on any device such as a mobile or desktop and can be completed offline for submission once the user has reconnected.

### **Configuration options:**

* Add custom text input
* Add custom number input
* Add custom select input
* Show/hide default fields (some default fields are mandatory such as Child’s date of birth)
* Set 1 or 2 address for Mother, Father, Informant, Deceased
* Enabled/disabled partial date of births (Age in years)
* Enabled/disabled informant signature capture
* Enabled/disabled declaration introduction page
* Add National ID validation and declaration pre-population (National ID integration required eg. MOSIP)
* On/off send SMS notification to informant with tracking ID

### **Pre-condition**

A vital event has occurred such as a birth, death or marriage.

### **Triggers**

An informant has requested they want to declare a vital event.

### **Standard flow**

1. User with a declare scope `scope:record.declare-birth` or `scope:record.declare-death` or `scope:record.declare-marriage` clicks new declaration button ‘Plus button’
2. User selects an event type (event options available depends on their assigned scopes)
3. User completes declaration form
4. User uploads or takes a photo of supporting documents
5. User reviews all the details captured in the form against the supporting documents
6. User can choose to add any comments
7. User is prompted to capture the informant digital signature
8. Once all mandatory fields have been completed that are required for registration. Depending on the user's assigned scopes different actions are available on the review page:
   * If `scope:record.declaration-send-for-review` → Send for review
   * If `scope:record.declaration-send-for-approval` → Send for approval
   * If `scope:record.register` → Register
9. User is prompted to confirm their action
10. On confirming, declaration is sent to the Outbox for processing
11. Once processed the declaration status is updated and sent to the appropriate workqueue

### **Post conditions**

* Declaration is sent to the appropriate workqueue:
  * If Sent for review → Goes to the Ready to review workqueue
  * If Sent for approval → Goes to the Ready to review workqueue
  * If Registrar → Goes to the Ready to print workqueue
* Record audit is updated to log the action performed on the declaration
* Informant receives sms notification with tracking ID if ‘Sent for review’
* Informant receives sms notification with tracking ID and Registration number if ‘Registered’

### **Variations/Exceptions**

* If the user has no connection. Then the declaration will go to their Outbox. Once reconnected the declaration will be processed and sent.

{% embed url="https://youtu.be/ZVTGLsqaSqA" %}
